# ITKImageCompare

./: CMakeLists.txt  README.rst
src/: CMakeLists.txt  ImageCompare.cxx
test/: CMakeLists.txt  RandomImageSource.cxx
